--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
     "@svgr/webpack": "^8.1.0",
+    "framer-motion": "^11.1.9",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-intersection-observer": "^9.10.2",
+    "react-multi-carousel": "^2.8.5"
   },
   "devDependencies": {
     "@types/node": "^20",
