--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
     "@svgr/webpack": "^8.1.0",
+    "bcrypt": "^5.1.1",
     "framer-motion": "^11.1.9",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.10.2",
