configuration sign by google : completed but callback with error

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.15.17",
     "@svgr/webpack": "^8.1.0",
     "bcrypt": "^5.1.1",
+    "firebase": "^10.12.2",
     "framer-motion": "^11.1.9",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
@@ -28,6 +29,7 @@
     "react-multi-carousel": "^2.8.5"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
