--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^5.1.1",
     "firebase": "^10.12.2",
     "framer-motion": "^11.1.9",
+    "googleapis": "^139.0.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
